--- a/index.html
+++ b/index.html
@@ -28,5 +28,12 @@
     />
 
   </head>
-  <body></body>
+  <body>
+    <!--Header-->
+    <header>Header</header>
+    <!--Main content-->
+    <main>Main content</main>
+    <!--Footer-->
+    <footer>Footer</footer>
+  </body>
 </html>
