--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   </head>
   <body>
     <!--Header-->
-    <header>Header</header>
+    <header>
+        <a href="index.html"><h1 id="logo">Love Running</h1></a>
+    </header>
     <!--Main content-->
     <main>Main content</main>
     <!--Footer-->
