--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
     <!--Main content-->
     <main>Main content</main>
     <!--Footer-->
-    <footer>Footer</footer>
+    <footer>
+      <ul>
+        <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+        <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+      </ul>
+    </footer>
+<!--Font Awesome kit-->
+    <script src="https://kit.fontawesome.com/9b4cb9adc3.js" crossorigin="anonymous"></script>
   </body>
 </html>
