--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <header>
         <a href="index.html"><h1 id="logo">Love Running</h1></a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle" />
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
-           
+        <label for="nav-toggle" class="nav-toggle-label"></label>
+               <i class="fa-solid fa-bars"></i>
         <nav>
             <ul id="menu">
                 <li><a href="" class="active">Home</a></li>
@@ -50,6 +50,8 @@
       <ul>
         <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
         <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+        <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a></li>
+        <li><a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit our YouTube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a></li>
       </ul>
     </footer>
 <!--Font Awesome kit-->
