--- a/signup.html
+++ b/signup.html
@@ -33,15 +33,13 @@
     <header>
         <a href="index.html"><h1 id="logo">Love Running</h1></a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle" />
-        <label for="nav-toggle" class="nav-toggle-label">
-          <i class="fa-solid fa-bars"></i>
-        </label>
-               
+        <label for="nav-toggle" class="nav-toggle-label"></label>
+               <i class="fa-solid fa-bars"></i>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="index.html" >Home</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="signup.html" class="active">Sign Up</a></li>
             </ul>
         </nav>
     </header>
