--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
         </nav>
     </header>
     <!--Main content-->
-    <main>Main content</main>
+    <main>
+      <section id="hero">
+        
+      </section>
+    </main>
     <!--Footer-->
     <footer>
       <ul id="social-networks">
